--- a/navigationBar/navigationBar.css
+++ b/navigationBar/navigationBar.css
@@ -7,9 +7,17 @@ ul {
     color: white;
     background: black;
     text-align: center;
+    padding: 1em;
 }
 
 li {
-    margin-bottom: 1em;
+    margin: 1em;
     list-style-type: none;
+}
+
+@media screen and (min-width: 768px) {
+    ul {
+        display: flex;
+        justify-content: flex-end;
+    }
 }
